Testing with AWS S3 URL's

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
     	</h1>
 
         <video controls width="160" height="120">
-            <source src="{{ url_for('static', filename='videos/turning_pages.mp4') }}" type="video/mp4">
+            <source src="http://s3.amazonaws.com/SPD_Videos/Videos/turning_pages.mp4" type="video/mp4">
         </video>
     </div>
 
