--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,15 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-    <style>
+    <link href="http://vjs.zencdn.net/4.0/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/4.0/video.js"></script>
+    <style type="text/css">
+      .vjs-play-progress, .vjs-volume-level { background-color: #7939e3 }
+      .vjs-control-bar, .vjs-big-play-button { background: rgba(6,31,161,0.43) }
+      .vjs-slider { background: rgba(6,31,161,0.14333333333333334) }
+      .vjs-control-bar { font-size: 69% }
     </style>
+
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -58,12 +65,15 @@
     </div>
     <div class="container">
     	<h1>
-    		Bootstrap starter template
+    		VIDEO SANDBOX
     	</h1>
-
-        <video controls width="160" height="120">
-            <source src="http://s3.amazonaws.com/SPD_Videos/Videos/turning_pages.mp4" type="video/mp4">
+        
+        <video id="my_video_1" class="video-js vjs-default-skin" controls
+             preload="auto" width="640" height="264" poster="http://1.bp.blogspot.com/_d-JP5xdXyak/TCjMOLE6u7I/AAAAAAAARbY/DFCtFv4rD1w/s320/chihuahua.gif"
+             data-setup="{}">
+             <source src="http://s3.amazonaws.com/SPD_Videos/Videos/turning_pages.mp4" type='video/mp4'>
         </video>
+
     </div>
 
 
