--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
         body {
           padding-top: 60px;
         }
-    .vjs-default-skin .vjs-big-play-button { display: block; / Start hidden / z-index: 2; position: absolute; top: 50%; left: 50%; width: 8.0em; height: 8.0em; margin: -42px 0 0 -42px; text-align: center; vertical-align: center; cursor: pointer !important; border: 0.2em solid #fff; opacity: 0.35; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px;
+    .vjs-default-skin .vjs-big-play-button { display: block; / Start hidden / z-index: 2; position: absolute; top: 50%; left: 50%; width: 8.0em; height: 8.0em; margin: -42px 0 0 -42px; text-align: center; vertical-align: center; cursor: pointer !important; border: 0.2em solid #fff; opacity: 0.35; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px; background: url('http://1.bp.blogspot.com/_d-JP5xdXyak/TCjMOLE6u7I/AAAAAAAARbY/DFCtFv4rD1w/s320/chihuahua.gif') -100px 0; }
 
 background: #454545; background: -moz-linear-gradient(top, #454545 0%, #232323 50%, #161616 50%, #3f3f3f 100%); background: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%,#454545), color-stop(50%,#232323), color-stop(50%,#161616), color-stop(100%,#3f3f3f)); background: -webkit-linear-gradient(top, #454545 0%,#232323 50%,#161616 50%,#3f3f3f 100%); background: -o-linear-gradient(top, #454545 0%,#232323 50%,#161616 50%,#3f3f3f 100%); background: -ms-linear-gradient(top, #454545 0%,#232323 50%,#161616 50%,#3f3f3f 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#454545', endColorstr='#3f3f3f',GradientType=0 ); background: linear-gradient(top, #454545 0%,#232323 50%,#161616 50%,#3f3f3f 100%);
 
@@ -93,8 +93,6 @@ background: #454545; background: -moz-linear-gradient(top, #454545 0%, #232323 5
 .vjs-default-skin div.vjs-big-play-button:hover { -webkit-box-shadow: 0 0 80px #fff; -moz-box-shadow: 0 0 80px #fff; box-shadow: 0 0 80px #fff; }
 
 .vjs-default-skin div.vjs-big-play-button span { position: absolute; top: 50%; left: 50%; display: block; width: 35px; height: 42px; margin: -20px 0 0 -15px; / Using negative margin to center image. / background: url('http://1.bp.blogspot.com/_d-JP5xdXyak/TCjMOLE6u7I/AAAAAAAARbY/DFCtFv4rD1w/s320/chihuahua.gif') -100px 0; }
-
-
 
 
 
