--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
     	</div>
     </div>
     <div class="container">
-    	<h1>
+    	<h1 style="color:#7936ed;">
     		VIDEO SANDBOX
     	</h1>
         
@@ -83,6 +83,7 @@
       
         body {
           padding-top: 60px;
+          background: url('http://i.imgur.com/WjQUWII.png');
         }
     .vjs-default-skin .vjs-big-play-button { display: block; / Start hidden / z-index: 2; position: absolute; top: 50%; left: 50%; width: 8.0em; height: 8.0em; margin: -42px 0 0 -42px; text-align: center; vertical-align: center; cursor: pointer !important; background: url('http://1.bp.blogspot.com/_d-JP5xdXyak/TCjMOLE6u7I/AAAAAAAARbY/DFCtFv4rD1w/s320/chihuahua.gif') -100px 0; }
 
